--- a/.github/workflows/test_running_config.yml
+++ b/.github/workflows/test_running_config.yml
@@ -13,14 +13,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.0.100
+        
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: SoftServe-internship/ToDo
+      working-directory: SoftServe-internship/ToDo/ToDo.Tests, SoftServe-internship/ToDo/ToDo.Main
+      
     - name: Build
       run: dotnet build --no-restore
+      
     - name: Test
       run: dotnet test --no-build --verbosity normal
