--- a/.github/workflows/test_running_config.yml
+++ b/.github/workflows/test_running_config.yml
@@ -21,7 +21,7 @@ jobs:
         
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: SoftServe-internship/ToDo/ToDo.Tests, SoftServe-internship/ToDo/ToDo.Main
+      working-directory: SoftServe-internship/ToDo/ToDo.Tests
       
     - name: Build
       run: dotnet build --no-restore
