--- a/.github/workflows/test_running_config.yml
+++ b/.github/workflows/test_running_config.yml
@@ -24,7 +24,7 @@ jobs:
         
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: "**/ToDo/**/*.csproj"
+      working-directory: "**/todo/**/*.csproj"
       
     - name: Build
       run: dotnet build --configuration Release
