--- a/.github/workflows/test_running_config.yml
+++ b/.github/workflows/test_running_config.yml
@@ -23,7 +23,7 @@ jobs:
         dotnet-version: 3.0.100
         
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./ToDo/
      # working-directory: "**/todo/**/*.csproj"
       
     - name: Build
