--- a/.github/workflows/test_running_config.yml
+++ b/.github/workflows/test_running_config.yml
@@ -29,4 +29,4 @@ jobs:
       run: dotnet build --configuration Release --no-restore ./ToDo
       
     - name: Test
-      run: dotnet test --no-restore --no-build --configuration Release
+      run: dotnet test --no-restore --no-build --configuration Release ./ToDo
