--- a/.github/workflows/test_running_config.yml
+++ b/.github/workflows/test_running_config.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ./ToDo/
            
+    - name: Clean
+      run: dotnet clean ./ToDo/ToDo.sln --configuration Release && dotnet nuget locals all --clear
+      
     - name: Build
       run: dotnet build --configuration Release --no-restore ./ToDo
       
