--- a/.github/workflows/test_running_config.yml
+++ b/.github/workflows/test_running_config.yml
@@ -2,7 +2,9 @@ name: Tests configuration
 
 on:
   push:
-    branches: [ master/** ]
+    branches: 
+     - master
+     - 'master/**' 
   pull_request:
     branches: [ master ]
 
