--- a/ToDo/ToDo.Main/ToDo.Main.csproj
+++ b/ToDo/ToDo.Main/ToDo.Main.csproj
@@ -19,6 +19,7 @@
     <PropertyGroup>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <NoWarn>$(NoWarn);1591</NoWarn>
+        <UserSecretsId>a8f1f25f-b479-45ec-8f0a-4da96fc96a19</UserSecretsId>
     </PropertyGroup>
 
 </Project>
